reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_serde_rename_on_variants-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < Action > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeActionCreateItemContent(BaseModel):
    """create_item content"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    name: str


class ReflectapiDemoTestsSerdeActionCreateItem(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    kind: Literal["create_item"] = Field(
        default="create_item", description="Discriminator field"
    )
    data: ReflectapiDemoTestsSerdeActionCreateItemContent = Field(
        description="create_item content"
    )


class ReflectapiDemoTestsSerdeActionDeleteItemContent(BaseModel):
    """delete_item content"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    id: int


class ReflectapiDemoTestsSerdeActionDeleteItem(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    kind: Literal["delete_item"] = Field(
        default="delete_item", description="Discriminator field"
    )
    data: ReflectapiDemoTestsSerdeActionDeleteItemContent = Field(
        description="delete_item content"
    )


class ReflectapiDemoTestsSerdeAction(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdeActionCreateItem,
            ReflectapiDemoTestsSerdeActionDeleteItem,
        ],
        Field(discriminator="kind"),
    ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            ActionCreateItemContent = ReflectapiDemoTestsSerdeActionCreateItemContent
            ActionCreateItem = ReflectapiDemoTestsSerdeActionCreateItem
            ActionDeleteItemContent = ReflectapiDemoTestsSerdeActionDeleteItemContent
            ActionDeleteItem = ReflectapiDemoTestsSerdeActionDeleteItem
            Action = ReflectapiDemoTestsSerdeAction


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Action] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Action]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Action]: Response containing reflectapi_demo.tests.serde.Action data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Action,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Action] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Action]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Action]: Response containing reflectapi_demo.tests.serde.Action data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Action,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeAction,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
