reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_variant_other-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < TestEnumWithVariantOther > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeInputTestEnumWithVariantOtherV0(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["V0"] = Field(default="V0", description="Discriminator field")


class ReflectapiDemoTestsSerdeInputTestEnumWithVariantOther(RootModel):
    root: Annotated[
        Union[ReflectapiDemoTestsSerdeInputTestEnumWithVariantOtherV0],
        Field(discriminator="type"),
    ]


class ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOtherV0(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["V0"] = Field(default="V0", description="Discriminator field")


class ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOtherVariant1(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Variant1"] = Field(
        default="Variant1", description="Discriminator field"
    )


class ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOther(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOtherV0,
            ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOtherVariant1,
        ],
        Field(discriminator="type"),
    ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            class input:
                """Namespace for input types."""

                TestEnumWithVariantOtherV0 = (
                    ReflectapiDemoTestsSerdeInputTestEnumWithVariantOtherV0
                )
                TestEnumWithVariantOther = (
                    ReflectapiDemoTestsSerdeInputTestEnumWithVariantOther
                )

            class output:
                """Namespace for output types."""

                TestEnumWithVariantOtherV0 = (
                    ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOtherV0
                )
                TestEnumWithVariantOtherVariant1 = (
                    ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOtherVariant1
                )
                TestEnumWithVariantOther = (
                    ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOther
                )


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.input.TestEnumWithVariantOther
        ] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.output.TestEnumWithVariantOther]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.output.TestEnumWithVariantOther]: Response containing reflectapi_demo.tests.serde.output.TestEnumWithVariantOther data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.output.TestEnumWithVariantOther,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.input.TestEnumWithVariantOther
        ] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.output.TestEnumWithVariantOther]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.output.TestEnumWithVariantOther]: Response containing reflectapi_demo.tests.serde.output.TestEnumWithVariantOther data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.output.TestEnumWithVariantOther,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeInputTestEnumWithVariantOther,
    ReflectapiDemoTestsSerdeOutputTestEnumWithVariantOther,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
