reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_variant_skip_deserialize-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestEnumWithVariantSkipDeserialize > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.input.TestEnumWithVariantSkipDeserialize,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export namespace input {
        export type TestEnumWithVariantSkipDeserialize = never;
      }

      export namespace output {
        export type TestEnumWithVariantSkipDeserialize = "_Variant1";
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.input.TestEnumWithVariantSkipDeserialize,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.input.TestEnumWithVariantSkipDeserialize,
        {},
        reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
